--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "zone.js"
+            ],
             "aot": true,
             "outputPath": "dist",
             "index": "src/index.html",
