--- a/package.json
+++ b/package.json
@@ -7,36 +7,37 @@
     "build-dev": "ng build",
     "build-staging": "ng build --aot --configuration=staging",
     "build": "ng build --prod",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "postinstall": "ngcc --tsconfig ./src/tsconfig.app.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/forms": "~9.1.0",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
+    "@angular/animations": "^10.0.9",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.9",
+    "@angular/compiler": "~10.0.9",
+    "@angular/core": "~10.0.9",
+    "@angular/forms": "~10.0.9",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "~10.0.9",
+    "@angular/platform-browser-dynamic": "~10.0.9",
+    "@angular/router": "~10.0.9",
     "moment": "^2.24.0",
     "ngx-cookie-service": "^3.0.3",
     "ngx-device-detector": "^1.4.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler-cli": "~10.0.9",
+    "@angular/language-service": "~10.0.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "ts-node": "~8.3.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.9.7"
   }
 }
